--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <groupId>ECOMMERS</groupId>
   <artifactId>ebay</artifactId>
   <packaging>war</packaging>
- <version>1.0.237.${BUILD_NUMBER}</version>
+ <version>1.0.0.${BUILD_NUMBER}</version>
   
-<!-- <version>1.0.1.0-SNAPSHOT</version>  -->
+<!-- <version>1.0-SNAPSHOT</version>  -->
 
   <name>ebay Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -21,19 +21,8 @@
 		</dependency>
   </dependencies>
   
-<!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<===============>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> 
-<<<<<<< HEAD
- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<==================>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>   
-														BUILD_PROFILEss
- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<===============>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<================>>>>>>dgkfkgj>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
-=======
- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<==================>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>   
-														BUILD_PROFILES
- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<===============>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<================>>>>>>dgkfkgj>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
->>>>>>> 30e1a436a9ac1e75fb8c0dbd34fb8a1b230b9dab
-
+<!-- ||BUILD_PROFILES||-->
+  
 <profiles>
 	<profile>
 		<id>test</id>
