fix for static code analysis

--- a/pom.xml
+++ b/pom.xml
@@ -251,12 +251,12 @@
 			</plugin>
 		-->
 	
-		<!-- <plugin> 
+		<plugin> 
 					<groupId>ord.codehaus.mojo</groupId>
 					<artifactId>sonar-maven-plugin</artifactId> 
 					<version>2.2</version>
-			</plugin>
-		-->
+		</plugin>
+		
 
 		
 		<!--  
